Changelog
=========


1.2 (unreleased)
----------------

- Let the stub_request method also stub the getStatus of the response.
  [phgross]

- Add ``stub_request`` method to ``MockTestCase``.
  [jone]

- No longer tear down the component registry in mock test case. Use the
  ComponentRegistryLayer.
  [jone]

- Add ``ComponentRegistryLayer`` base class.
  [jone]

- Add ``mock_interface`` and ``stub_interface`` methods to MockTestCase, creating
  a mock and using the interface as spec.
  [jone]

- Accept also interfaces directly rather than lists of interfaces when
  creating mocks or stubs which provides the interfaces.
  [jone]


1.1 (2011-11-16)
----------------

- Patch mock_tool: do not count, so that it can be used multiple times.
  [jone]


1.0 (2011-10-12)
----------------

- Initial release