@@ -5,6 +5,9 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+- Made providing interfaces configurable for the ``stub_request`` method.
+  [phgross]
+
 - Let the stub_request method also stub the getStatus of the response.
   [phgross]
 
